created stopwatch component
stopwatch.component.ts
stopwatch.component.html
stopwatch.component.css

--- a/firstProject/src/app/app.component.html
+++ b/firstProject/src/app/app.component.html
@@ -2,3 +2,9 @@
 <h2>I'm in the component app</h2>
 <h1>I'm in the component app</h1>
 <p>I'm in the component app</p>
+<hr>
+<app-server></app-server>
+<hr>
+<app-todos></app-todos>
+<hr>
+<app-stopwatch></app-stopwatch>
