--- a/firstProject/src/app/app.component.html
+++ b/firstProject/src/app/app.component.html
@@ -1,10 +1,19 @@
-<h3>I'm in the component app</h3>
-<h2>I'm in the component app</h2>
-<h1>I'm in the component app</h1>
-<p>I'm in the component app</p>
-<hr>
-<app-server></app-server>
-<hr>
-<app-todos></app-todos>
-<hr>
-<app-stopwatch></app-stopwatch>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>I'm in the component app</h3>
+            <h2>I'm in the component app</h2>
+            <h1>I'm in the component app</h1>
+            <p>I'm in the component app</p>
+            <hr>
+            <app-server></app-server>
+            <hr>
+            <app-todos></app-todos>
+            <hr>
+            <app-stopwatch></app-stopwatch>
+            <hr>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
+
