--- a/demoProject/demoProject/src/app/app.component.html
+++ b/demoProject/demoProject/src/app/app.component.html
@@ -23,9 +23,10 @@
       </p>
       <label><strong>User Name</strong></label>
       <input 
-      type="text"
-      class="form-control"
-      [(ngModel)]="username">
+        type="text"
+        class="form-control"
+        [(ngModel)]="username"
+      >
       <hr/>
       <p>
         <ngb-alert type = 'success'[dismissible]="false">
