--- a/firstProject/src/app/MyComponents/stopwatch/stopwatch.component.html
+++ b/firstProject/src/app/MyComponents/stopwatch/stopwatch.component.html
@@ -1,4 +1,4 @@
-<p>Stop Watch works!</p>
+<p [ngStyle]="{backgroundColor: 'green' }">Stop Watch works!</p>
 
 <div class="container">
   <div class="row">
@@ -19,7 +19,7 @@
       <div class="alert alert-success" role="alert">
         <label><strong>Duration</strong></label>
         <p>
-          The duaration of the Stop Watch : <strong>{{ duration }}</strong>
+          The duration of the Stop Watch : <strong>{{ duration }}</strong>
         </p>
       </div>
     </div>
