--- a/firstProject/src/app/MyComponents/servers/servers.component.html
+++ b/firstProject/src/app/MyComponents/servers/servers.component.html
@@ -1,28 +1,45 @@
-<label>Server Name</label>
-<input
-  type="text"
-  class="form-control"
-  (input)="onUpdateServerName($event)">
-<hr />
-<p>{{serverName}} </p>
-<hr />
-<input
-  type="text"
-  class="form-control"
-  [(ngModel)]="serverName">
-<hr />
-<button
-  class="btn btn-primary"
-  [disabled]="!allowNewServer"
-  (click)="onCreateServer()">
-  Add Server
-</button>
-<hr />
-<p class="creation">{{ serverCreationStatus }}</p>
-<hr />
-<p [innerText]="allowNewServer"></p>
-<hr />
-<p>Status of New Server : {{ allowNewServer }}</p>
-<hr />
-<app-server></app-server>
-<app-server></app-server>
+<p [ngStyle]="{backgroundColor:'green'}" > Servers Works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="alert alert-primary">
+        <p class= "text-center">
+          <strong>Server Name</strong>
+        </p>
+      </div>
+      <hr>
+      <input
+        type="text"
+        class="form-control"
+        (input)="onUpdateServerName($event)"
+      />
+      <p>{{ serverCreationStatus }}</p>
+      <hr>
+      <p *ngIf = "serverCreated; else noServer" > The server name is : {{ serverName }}</p>
+      <ng-template #noServer> 
+        <p> No server name </p>
+      </ng-template>
+      <hr />
+      <input 
+        type="text" 
+        class="form-control" 
+        [(ngModel)]="serverName" 
+      />
+      <p class="creation">{{ serverCreationStatus }}</p>
+      <hr />
+      <button
+        class="btn btn-dark"
+        [disabled]="!allowNewServer"
+        (click)="onCreateServer()">
+        Add Server
+      </button>
+      <hr />
+      
+      <hr />
+      <p [innerText]="allowNewServer"></p>
+      <hr />
+      <p>Status of New Server : {{ allowNewServer }}</p>
+      <hr />
+    </div>
+  </div>
+</div>
