--- a/projectList/src/app/shopping-list/shopping-list.component.html
+++ b/projectList/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,16 @@
 <div class="row">
   <div class="col-md-10">
+    <h1 class="badge bg-success">This is the shopping list</h1>
     <app-shopping-edit></app-shopping-edit>
     <hr />
-    <p>the list</p>
+    <ul class="list-group">
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredients of ingredients"
+      >
+        {{ ingredients.name }}({{ ingredients.amount }})
+      </a>
+    </ul>
   </div>
 </div>
